--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,28 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="messageLeft">
-        <item name="android:textSize">15dp</item>
-        <item name="android:layout_margin">10dp</item>
-        <item name="android:textAlignment">textStart</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#117711</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:padding">10dp</item>
-    </style>
-
-    <style name="messageRight">
-        <item name="android:textSize">15dp</item>
-        <item name="android:layout_margin">10dp</item>
-        <item name="android:textAlignment">textEnd</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#DF680D</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:layout_gravity">right</item>
-        <item name="android:padding">10dp</item>
-    </style>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="contactImg">
         <item name="android:layout_width">80dp</item>
         <item name="android:layout_height">80dp</item>
@@ -34,5 +11,18 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">#FFF</item>
+    </style>
+
+    <style name="cardIn">
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginEnd">50dp</item>
+        <item name="cardBackgroundColor">#FF9800</item>
+        <item name="layout_constraintHorizontal_bias">0</item>
+    </style>
+    <style name="cardOut">
+        <item name="android:layout_marginStart">50dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="cardBackgroundColor">#8BC34A</item>
+        <item name="layout_constraintHorizontal_bias">1</item>
     </style>
 </resources>
