--- a/app/src/main/res/layout/sms.xml
+++ b/app/src/main/res/layout/sms.xml
@@ -34,6 +34,7 @@
                 android:textAlignment="viewStart"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:textIsSelectable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
