done: sending smses starting new chat listening for incoming smses
todo:
hashing smses

nice to have:
notifications about hashed messages
integrity with contacts

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,11 @@
         <item name="cardBackgroundColor">#8BC34A</item>
         <item name="layout_constraintHorizontal_bias">1</item>
     </style>
+
+    <style name="hashOn">
+        <item name="android:tint">#FF9800</item>
+    </style>
+    <style name="hashOff">
+        <item name="android:tint">#858585</item>
+    </style>
 </resources>
